[package]
name = "stream-native"
version = "1.0.0"
edition = "2021"

[lib]
name = "stream_native"
crate-type = ["cdylib"]

[dependencies]
neon = { version = "1.0", features = ["napi-6", "async"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
